[package]
name = "rust-test-harness"
version = "0.1.0"
edition = "2021"
description = "A modern, feature-rich testing framework for Rust with Docker integration"
license = "Apache-2.0"
repository = "https://github.com/yourusername/rust-test-harness"
keywords = ["testing", "framework", "docker", "integration"]
categories = ["development-tools"]

[dependencies]
once_cell = "1"
log = "0.4"
env_logger = "0.11"
atty = "0.2"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "rust-test-harness"
path = "src/main.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_features"
path = "examples/advanced_features.rs"

[[example]]
name = "real_world_calculator"
path = "examples/real_world_calculator.rs"



[[example]]
name = "realistic_database"
path = "examples/realistic_database.rs"

[[example]]
name = "mongodb_integration"
path = "examples/mongodb_integration.rs"
