[package]
name = "rust-test-harness"
version = "0.1.2"
edition = "2021"
description = "A modern, feature-rich testing framework for Rust with Docker integration"
license = "Apache-2.0"
repository = "https://github.com/yourusername/rust-test-harness"
keywords = ["testing", "framework", "docker", "integration"]
categories = ["development-tools"]

[dependencies]
once_cell = "1"
log = "0.4"
env_logger = "0.11"
atty = "0.2"
uuid = { version = "1.0", features = ["v4"] }
rayon = "1.8"
chrono = "0.4"

[features]
default = []
docker = ["bollard", "tokio"]

[dependencies.bollard]
version = "0.19"
optional = true

[dependencies.tokio]
version = "1.0"
optional = true
features = ["full"]

# Core examples demonstrating the main usage patterns
[[example]]
name = "minimal_rust_style"
path = "examples/minimal_rust_style.rs"

[[example]]
name = "rust_style_tests"
path = "examples/rust_style_tests.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_features"
path = "examples/advanced_features.rs"

# Real-world examples
[[example]]
name = "real_world_calculator"
path = "examples/real_world_calculator.rs"

[[example]]
name = "mongodb_integration"
path = "examples/mongodb_integration.rs"

# Integration examples
[[example]]
name = "cargo_test_integration"
path = "examples/cargo_test_integration.rs"

# HTML Reporting example
[[example]]
name = "html_reporting"
path = "examples/html_reporting.rs"

# Auto-port and container management demo
[[example]]
name = "auto_port_demo"
path = "examples/auto_port_demo.rs"

# Container port and URL access example
[[example]]
name = "container_port_access"
path = "examples/container_port_access.rs"
